--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,13 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(path: ':lib')
-    compile project(':vusikview')
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
+    compile project(':vusikview')
     compile project(':gif')
     compile project(':incdeclibrary')
+    compile project(':recycleviewpager')
+    compile project(':morphbutton')
+    compile project(':splash')
 }
