congrats & stats page done

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile project(':recycleviewpager')
     compile project(':morphbutton')
     compile project(':splash')
+    compile project(':explosionfield')
 }
