--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':splash', ':vusikview', ':gif', ':incdeclibrary', ':recycleviewpager', ':morphbutton'
+include ':app', ':splash', ':vusikview', ':gif', ':incdeclibrary', ':recycleviewpager', ':morphbutton', ':explosionfield'
