--- a/database/src/main/AndroidManifest.xml
+++ b/database/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mashroor.databasemanagement">
+    package="com.banglabee.mashroor.databasemanagement">
 
     <application
         android:allowBackup="true"
