--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.example.rezwan.spellingc"
+        applicationId "com.banglabee"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -31,6 +31,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'com.facebook.android:facebook-android-sdk:4.19.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile project(':vusikview')
     compile project(':gif')
     compile project(':incdeclibrary')
